# MiniBot

./: .env.example  .gitignore  DEMO.md  LICENSE  README.md  pyproject.toml
benchmarks/channel/: channel_batch_001.json  channel_cli_001.json  channel_cli_002.json  channel_cli_003.json  channel_feishu_mock_001.json  channel_http_001.json  channel_http_002.json
benchmarks/context/: context_batch_001.json  context_batch_002.json  (+19 more)
configs/: hooks.backup.json  hooks.demo.json  hooks.json  minibot.json  minibot.json.bak  policy.json  tools.json
docker/: Dockerfile.sandbox
docs/: PRD_MINIBOT_V1.md  PRD_MINIBOT_V1_RESUME_COMPLETE.md  architecture.md  decisions.md  demo_script.md  feishu_setup.md  final_acceptance.md  hook_runtime.md  resume_complete_gap.md  resume_mapping.md  resume_positioning.md
examples/: mock_feishu_event.json
experiments/: README.md  protocol.md
minibot/: __init__.py  __main__.py  app.py  cli.py  config.py  json_utils.py  status.py  workspace.py
scripts/: run_experiments.ps1  run_feishu.ps1  run_http.ps1  run_multiround_benchmark.ps1  run_real_agent_benchmark.ps1  run_safety_benchmark.ps1  run_status.ps1
tests/: conftest.py  test_agent_loop.py  test_channels.py  test_cli.py  test_docker_executor_real.py  test_docs.py  test_evals.py  test_evidence.py  test_experiment_runner.py  test_governance.py  test_hook_demo_config.py  test_hooks.py  test_memory_context.py  test_model_client_real.py  test_model_verifier_real.py  test_planner_benchmark.py  test_planning.py  test_subagents.py  test_summarizer_agent_real.py  test_tasks.py  test_tools.py
(+205 files in other folders)
